tf/vpc.tf
# Define the VPC
resource "aws_vpc" "susivpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "susivpc" 
  }
  }
